--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -1,3 +1,65 @@
 // Place all the styles related to the Tasks controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.container{
+  text-align: center;
+  padding: 10px;
+  margin: 0 auto;
+  width: 300px;
+  background: #f5c7f7;
+  height: 400px;
+  border: solid 2px #5e0a0a;
+  border-radius: 5px;
+}
+
+ul{
+  list-style: none;
+  padding: 0;
+}
+
+li{
+  font-size: 20px;
+  margin: 10px 0;
+  text-decoration: none;
+}
+
+
+p{
+  font-size: 20px;
+  color: #5e0a0a;
+}
+
+h2{
+  color: #5e0a0a;
+}
+
+h1{
+  color: #5e0a0a;
+}
+
+.container .buttons li{
+  padding: 20px;
+}
+
+.btn{
+  background: #9764c7;
+  padding: 10px;
+  border-radius: 5px;
+  border: 2px solid #5e0a0a;
+  color: #5e0a0a;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.tasks{
+  text-decoration: none;
+  color: #5e0a0a;
+}
+
+.container .buttons{
+  text-align: center;
+  margin: 0 auto;
+  width: 200px;
+  margin-top: 40px;
+  font-size: 12px
+}
