--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,14 +1,16 @@
-<h1> Edit Task: </h1>
+<div class="container">
+  <h1> Edit Task: </h1>
 
-<%= form_for @task do |f| %>
-  <%= f.label :title %>
-  <%= f.text_field :title %>
+  <%= form_for @task do |f| %>
+    <%= f.label :title %>
+    <%= f.text_field :title %>
 
-  <%= f.label :details %>
-  <%= f.text_field :details %>
+    <%= f.label :details %>
+    <%= f.text_field :details %>
 
-  <%= f.submit %>
-<% end %>
+    <%= f.submit %>
+  <% end %>
+</div>
 
 
 
