--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,7 +1,15 @@
-<ul>
-  <% @tasks.each do |task| %>
-  <li><%=link_to task.title, task_path(task) %></li>
-  <% end %>
-</ul>
 
-<%= link_to "Create a new task", "tasks/new"%>
+<div class="container">
+  <h1> To do: </h1>
+  <ul>
+    <% @tasks.each do |task| %>
+    <li><%=link_to task.title, task_path(task),
+      class: "tasks" %></li>
+    <% end %>
+  </ul>
+
+  <div class="buttons">
+    <%= link_to "Create a new task", "tasks/new",
+      class: "btn"%>
+  </div>
+</div>
