--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,12 +1,18 @@
-<h1> New Task: </h1>
+<div class="container">
+  <h1> New Task: </h1>
 
-<%= form_for(@task) do |f| %>
-  <%= f.label :title %>
-  <%= f.text_field :title %>
+  <%= form_for(@task) do |f| %>
+  <div class="form-group">
+    <%= f.label :title %>
+    <%= f.text_field :title, class: "form-control" %>
+  </div>
 
-  <%= f.label :details %>
-  <%= f.text_field :details %>
+  <div class="form-group">
+    <%= f.label :details %>
+    <%= f.text_field :details, class: "form-control" %>
+  </div>
 
-  <%= f.submit %>
-<% end %>
+    <%= f.submit %>
+  <% end %>
+</div>
 
