--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,7 +1,14 @@
-<h2><%= @task.title %></h2>
-<p><%= @task.details %></p>
-<%= link_to "Back to List", tasks_path() %>
-<%= link_to "Edit this Task", edit_task_path(@task) %>
-<%= link_to "Delete", tasks_path(@task),
-    method: :delete,
-    data: { confirm: "Are you sure?" } %>
+
+<div class="container">
+  <h2>Task: <%= @task.title %></h2>
+  <p>Details: <%= @task.details %></p>
+  <p>Completed: <%= @task.completed %> </p>
+  <ul class="buttons">
+    <li><%= link_to "Back to List", tasks_path(), class: "btn" %></li>
+    <li><%= link_to "Edit this Task", edit_task_path(@task), class: "btn" %></li>
+    <li><%= link_to "Delete", tasks_path(@task),
+      method: :delete,
+      data: { confirm: "Are you sure?" },
+      class: "btn" %></li>
+  </ul>
+</div>
